[tool.poetry]
name = "deeplearning-exp"
version = "0.1.0"
description = ""
authors = ["Sanjit Saluja <loopwhile1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mitdeeplearning = "^0.7.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
