[tool.poetry]
name = "deeplearning-exp"
version = "0.1.0"
description = ""
authors = ["Sanjit Saluja <loopwhile1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mitdeeplearning = "^0.7.5"
torch = "^2.7.0"
torchvision = "^0.22.0"
torchaudio = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
